--- a/hey/Base.lproj/Main.storyboard
+++ b/hey/Base.lproj/Main.storyboard
@@ -151,7 +151,7 @@
         <!--Message View Controller-->
         <scene sceneID="Lao-dV-dOz">
             <objects>
-                <viewController id="dnd-hU-7QK" customClass="MessageViewController" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="dnd-hU-7QK" customClass="MessageViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="g9f-ge-sKI"/>
                         <viewControllerLayoutGuide type="bottom" id="ccU-rE-b0Y"/>
@@ -160,39 +160,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSh-jb-Suc">
-                                <rect key="frame" x="93" y="84" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LPA-gh-hrI">
-                                <rect key="frame" x="16" y="170" width="288" height="378"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="TopLeft" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPA-gh-hrI">
+                                <rect key="frame" x="16" y="170" width="288" height="390"/>
+                                <color key="backgroundColor" red="0.8988517992424242" green="0.8988517992424242" blue="0.8988517992424242" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2QH-VZ-Yo5">
-                                <rect key="frame" x="16" y="141" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Текст сообщения:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2QH-VZ-Yo5">
+                                <rect key="frame" x="16" y="141" width="288" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="nAp-6O-2Z0"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gal-LR-8Wc">
-                                <rect key="frame" x="16" y="84" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Гос номер:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gal-LR-8Wc">
+                                <rect key="frame" x="16" y="72" width="97" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="sdG-GQ-nZc"/>
+                                    <constraint firstAttribute="width" constant="97" id="ta7-2Z-YM1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSh-jb-Suc">
+                                <rect key="frame" x="126" y="72" width="178" height="20.5"/>
+                                <color key="backgroundColor" red="0.8355626464" green="0.8355626464" blue="0.8355626464" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.5" id="zvb-Dj-xmH"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2QH-VZ-Yo5" firstAttribute="trailing" secondItem="d4M-Zr-nkY" secondAttribute="trailingMargin" id="2Gh-M6-oC7"/>
+                            <constraint firstItem="WSh-jb-Suc" firstAttribute="leading" secondItem="Gal-LR-8Wc" secondAttribute="trailing" constant="13" id="8Rt-Yc-0yb"/>
+                            <constraint firstItem="LPA-gh-hrI" firstAttribute="trailing" secondItem="d4M-Zr-nkY" secondAttribute="trailingMargin" id="Dlg-kV-cbD"/>
+                            <constraint firstItem="ccU-rE-b0Y" firstAttribute="top" secondItem="LPA-gh-hrI" secondAttribute="bottom" constant="8" symbolic="YES" id="RQj-gK-3ui"/>
+                            <constraint firstItem="2QH-VZ-Yo5" firstAttribute="top" secondItem="Gal-LR-8Wc" secondAttribute="bottom" constant="48" id="U8H-c7-42l"/>
+                            <constraint firstItem="Gal-LR-8Wc" firstAttribute="top" secondItem="g9f-ge-sKI" secondAttribute="bottom" constant="8" symbolic="YES" id="WM9-X0-b29"/>
+                            <constraint firstItem="2QH-VZ-Yo5" firstAttribute="leading" secondItem="d4M-Zr-nkY" secondAttribute="leadingMargin" id="bcm-go-PBZ"/>
+                            <constraint firstItem="WSh-jb-Suc" firstAttribute="trailing" secondItem="d4M-Zr-nkY" secondAttribute="trailingMargin" id="jNd-Qe-Ahk"/>
+                            <constraint firstItem="LPA-gh-hrI" firstAttribute="top" secondItem="2QH-VZ-Yo5" secondAttribute="bottom" constant="8" id="k5O-qr-Pky"/>
+                            <constraint firstItem="WSh-jb-Suc" firstAttribute="top" secondItem="g9f-ge-sKI" secondAttribute="bottom" constant="8" symbolic="YES" id="nAt-Lb-tEl"/>
+                            <constraint firstItem="LPA-gh-hrI" firstAttribute="top" secondItem="2QH-VZ-Yo5" secondAttribute="bottom" constant="8" id="rEx-PO-cuk"/>
+                            <constraint firstItem="LPA-gh-hrI" firstAttribute="leading" secondItem="d4M-Zr-nkY" secondAttribute="leadingMargin" id="s4M-ir-FDl"/>
+                            <constraint firstItem="Gal-LR-8Wc" firstAttribute="leading" secondItem="d4M-Zr-nkY" secondAttribute="leadingMargin" id="y8w-nY-R3M"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AiO-K6-Fbl"/>
+                    <connections>
+                        <outlet property="licenseNumderLabel" destination="WSh-jb-Suc" id="6y6-9F-9gi"/>
+                        <outlet property="messageBodyTextView" destination="LPA-gh-hrI" id="nwQ-fc-q07"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="syh-Qd-nXz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="494" y="840"/>
+            <point key="canvasLocation" x="447" y="805"/>
         </scene>
         <!--Master-->
         <scene sceneID="VgW-fR-Quf">
@@ -203,7 +232,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MessageCell" textLabel="2pz-XF-uhl" detailTextLabel="uMY-bL-CAx" style="IBUITableViewCellStyleSubtitle" id="m0d-ak-lc9">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AllMessageCell" textLabel="2pz-XF-uhl" detailTextLabel="uMY-bL-CAx" style="IBUITableViewCellStyleSubtitle" id="m0d-ak-lc9">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="m0d-ak-lc9" id="d3P-M7-ByW">
@@ -230,6 +259,21 @@
                                     <segue destination="dnd-hU-7QK" kind="push" identifier="PushMessage" id="Y0L-sQ-awN"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MyMessageCell" textLabel="qGD-1r-021" style="IBUITableViewCellStyleDefault" id="aP6-19-rmX">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aP6-19-rmX" id="Bgb-xb-Sc7">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qGD-1r-021">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
                         </prototypes>
                         <sections/>
                         <connections>
@@ -237,13 +281,28 @@
                             <outlet property="delegate" destination="pGg-6v-bdr" id="Y6K-Cp-Qkv"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Messages" id="tQt-TN-PWz">
+                    <navigationItem key="navigationItem" id="tQt-TN-PWz">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="3De-Fc-GoF">
+                            <rect key="frame" x="62.5" y="6" width="195" height="32"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="All messages"/>
+                                <segment title="My messages"/>
+                            </segments>
+                            <connections>
+                                <action selector="switchMode:" destination="pGg-6v-bdr" eventType="valueChanged" id="LDA-Kw-lQI"/>
+                            </connections>
+                        </segmentedControl>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="pkH-qg-DY6">
                             <connections>
                                 <segue destination="7LN-Hz-PsA" kind="modal" identifier="ModalNewMessage" id="Rt6-Bc-vOc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="segmentetControl" destination="3De-Fc-GoF" id="5Uh-qf-zFH"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Cn-md-YlS" sceneMemberID="firstResponder"/>
             </objects>
